--- a/manifest.json
+++ b/manifest.json
@@ -24,9 +24,12 @@
   },
   "permissions": [
     "tabs",
-    "storage"
+    "storage",
+    "notifications"
   ],
   "default_locale": "en",
   "version": "0.1",
-  "DEFAULT_TAB_LIMIT": 6
+  "DEFAULT_TAB_LIMIT": 6,
+  "DEFAULT_NOTIFY_BLOCKED": true,
+  "DEFAULT_NOTIFY_BLCOKED_DURATION": 5000
 }
